--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/native": "^6.1.10",
     "axios": "^1.6.7",
     "expo": "~50.0.6",
+    "expo-checkbox": "~2.7.0",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-safe-area-context": "4.8.2",
-    "expo-checkbox": "~2.7.0"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
