--- a/client/app.json
+++ b/client/app.json
@@ -11,21 +11,15 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "googleServicesFile": "./GoogleService-info.plist",
-      "supportsTablet": true,
-      "bundleIdentifier": "com.marolethea.client"
+      "supportsTablet": true
     },
     "android": {
-      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "package": "com.marolethea.client"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
