adjustment after delete firebase react native

--- a/client/app.json
+++ b/client/app.json
@@ -24,18 +24,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": [
-      "expo-font",
-      "expo-secure-store",
-      "@react-native-firebase/app",
-      [
-        "expo-build-properties",
-        {
-          "ios": {
-            "useFrameworks": "static"
-          }
-        }
-      ]
-    ]
+    "plugins": ["expo-font", "expo-secure-store"]
   }
 }
