--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "expo-image-picker": "~14.7.1",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-element-dropdown": "^2.10.1",
