--- a/client/package.json
+++ b/client/package.json
@@ -23,12 +23,15 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-element-dropdown": "^2.10.1",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/uuid": "^9.0.8",
     "typescript": "^5.1.3"
   },
   "private": true
