profile screen layout created

--- a/client/app.json
+++ b/client/app.json
@@ -24,6 +24,18 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-font", "expo-secure-store"]
+    "plugins": [
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "./assets/fonts/Courgette/Courgette-Regular.ttf",
+            "./assets/fonts/sunday_morning_10/SundayMorning.ttf",
+            "./assets/fonts/BrittanicLondon.ttf"
+          ]
+        }
+      ],
+      "expo-secure-store"
+    ]
   }
 }
