--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,9 @@
     "react-native-get-random-values": "^1.10.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "expo-font": "~11.10.3",
+    "expo-splash-screen": "~0.26.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
